...
import Ionicons from "@expo/vector-icons/Ionicons";

export default function TabLayout() {
  return (
    <NativeTabs>
      <NativeTabs.Trigger name="(home)">
        <Label>Home</Label>
        {Platform.select({
          ios: <Icon sf={{ default: "house", selected: "house.fill" }} />,
          android: (
            <Icon
              src={{
                default: <VectorIcon family={Ionicons} name="home-outline" />,
...
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="receive">
        <Label>Receive</Label>
        {Platform.select({
          ios: (
            <Icon sf={{ default: "arrow.down.left", selected: "arrow.down.left.circle.fill" }} />
          ),
          android: (
            <Icon
              src={{
                default: <VectorIcon family={Ionicons} name="arrow-down-outline" />,
                selected: <VectorIcon family={Ionicons} name="arrow-down" />,
...
