...
} from "../hooks/usePayments";
import Clipboard from "@react-native-clipboard/clipboard";
import QRCode from "react-native-qrcode-svg";
import { NoahSafeAreaView } from "~/components/NoahSafeAreaView";
import { useNavigation } from "@react-navigation/native";
import Icon from "@react-native-vector-icons/ionicons";
import { ArkIcon } from "~/lib/icons/Ark";
import { LightningIcon } from "~/lib/icons/Lightning";
import { OnchainIcon } from "~/lib/icons/Onchain";

type ReceiveType = "ark" | "onchain" | "lightning";

const receiveTypeDisplay: Record<ReceiveType, string> = {
...
              value={currentSelectValue}
              onValueChange={(v) => v && setReceiveType(v.value as ReceiveType)}
            >
              <SelectTrigger>
                <SelectValue
                  className="text-foreground text-sm native:text-lg"
                  placeholder="Select receive type..."
                />
              </SelectTrigger>
              <SelectContent>
                <SelectItem
                  label={receiveTypeDisplay.ark}
                  value="ark"
...
